# ThrustLogger

./: .gitignore  CMakeLists.txt  README.md
include/: dynamicchart.h  mainwindow.h  serialconfigwindow.h
lib/AveragerQueue/: averagerqueue.h
lib/SerialDevice/: serialdevice.cpp  serialdevice.h
resources/: loadcell_measurement.fzz
src/: dynamicchart.cpp  mainwindow.cpp  serialconfigwindow.cpp
ui/: mainwindow.ui  serialconfigwindow.ui
